# lapis-lazuli

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradle.properties  package.json  settings.gradle.kts  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/docs/: astro.config.mjs  package.json  wrangler.jsonc
apps/docs/.astro/: data-store.json  settings.json
apps/docs/src/layouts/: BaseLayout.astro  DocsLayout.astro
apps/docs/src/lib/: docs.ts  remark-doc-links.mjs
apps/docs/src/pages/: index.astro
docs/: README.md  architecture.md  authoring.md  bundle-format.md  cli.md  compatibility.md  python-sdk.md  testing.md
docs/api/: runtime-host-api.md  typescript-sdk.md
examples/hello-python/: lapis-plugin.json  pyproject.toml
examples/hello-python/src/: main.py
examples/hello-ts/: lapis-plugin.json  package.json
examples/hello-ts/src/: index.ts
runtime-bukkit/: build.gradle.kts
runtime-core/: build.gradle.kts
runtimes/jvm/bukkit/: build.gradle.kts
runtimes/jvm/core/: build.gradle.kts
scripts/: bump-version.mjs  check-release-version.mjs  deploy-docs-to-cloudflare.mjs  paper-smoke.sh
sdks/python/: README.md  pyproject.toml
sdks/python/src/lapis_lazuli/: __init__.py  _runtime.py
sdks/python/tests/: test_sdk.py
sdks/typescript/: package.json  tsconfig.build.json
sdks/typescript/src/: index.ts
sdks/typescript/test/: index.test.ts
tooling/cli/: package.json  tsconfig.build.json  tsconfig.json
tooling/cli/src/: bun-globals.d.ts  index.ts  lib.ts  templates.ts
tooling/cli/test/: lib.test.ts
(+153 files in other folders)
